create images folder and convert background image to local

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-image: url("https://cdn.pixabay.com/photo/2020/05/13/12/51/forest-5167332_1280.jpg");
+  background-image: url("/public/images/forest.jpg");
   background-size: cover;
   background-position: center;
 }
